# coriander

./: .gitignore  CMakeLists.txt  Doxyfile  Kconfig  LICENSE  README.dev.md  README.md  README.rel.md  check_vars.py  jscope_vars.txt  west.yml
.cache/clangd/index/: main.cc.CFBFAD3BEA26B215.idx
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cpplint.yml  publish.yml  unit_test.yml
app/: CMakeLists.txt  Kconfig  Kconfig.coriander  debug.conf  perf.conf  prj.conf  sysbuild.cmake  sysbuild.conf
app/boards/atk/: atk_param.cc
app/boards/td2kw/: td2kw_param.cc
app/cmake/: coverage.cmake  git_version.cmake
app/inc/: app_version.h.in
app/inc/coriander/: board_ctl.h  board_event.h  board_state.h  board_state_calibrate_handler.h  board_state_error_handler.h  board_state_firmware_update_handler.h  board_state_init_handler.h  board_state_reboot_handler.h  board_state_run_handler.h  board_state_standby_handler.h  container.h  coriander.h  iboard_event.h  iboard_state.h  iboard_state_calibrate_handler.h  iboard_state_error_handler.h  iboard_state_firmware_update_handler.h  iboard_state_init_handler.h  iboard_state_reboot_handler.h  iboard_state_run_handler.h  iboard_state_standby_handler.h  iprotocol_ctl.h  istate_handler.h  parameter_requirements.h  parameter_requirements_validator.h  parameters.h
app/inc/coriander/application/: appstatus.h  diagnosis.h  iappstatus.h
app/inc/coriander/backends/posix/: posix_appstatus.h  posix_logger.h  posix_mutex.h  posix_persistent_parameter.h  posix_semaphore.h  posix_systick.h  posix_thread.h
app/inc/coriander/backends/zephyr/: zephyr_appstatus.h  zephyr_bldc_driver.h  zephyr_diagnosis.h  zephyr_encoder.h  zephyr_logger.h  zephyr_motor.h  zephyr_mutex.h  zephyr_nvs.h  zephyr_persistent_parameter.h  zephyr_phase_current_estimator.h  zephyr_semaphore.h  zephyr_shell_protocol.h  zephyr_systick.h  zephyr_thread.h
app/inc/coriander/base/: const_hash.h  ilogger.h  itty.h  jscope.h  loggerstream.h  math.h  param.h  property.h  property_set.h  property_stream.h  type.h
app/inc/coriander/motorctl/: container.h  duration_estimator.h  encoder_elec_angle_estimator.h  encoder_mech_angle_estimator.h  foc.h  foc_motor_driver.h  ibldc_driver.h  ielec_angle_estimator.h  iencoder.h  imech_angle_estimator.h  imotorctl.h  iphase_current_estimator.h  isensor.h  ivelocity_estimator.h  low_pass_filter.h  motor_ctl_calibrate.h  motor_ctl_current.h  motor_ctl_dummy.h  motor_ctl_openloop.h  motor_ctl_position.h  motor_ctl_velocity.h  motor_ctl_wrapper.h  pid.h  sensor_handler.h  velocity_estimator.h
app/inc/coriander/os/: imutex.h  isemaphore.h  isystick.h  ithread.h
app/inc/coriander/os/zephyr/: mutex.h
app/inc/coriander/protos/: proto_td2kw.h  proto_td2kw_raw.h
app/src/: main.cc  main_zephyr.cc
app/src/coriander/: board_state.cc  board_state_calibrate_handler.cc  board_state_error_handler.cc  board_state_firmware_update_handler.cc  board_state_init_handler.cc  board_state_reboot_handler.cc  board_state_run_handler.cc  board_state_standby_handler.cc  coriander.cc  parameter_requirements_validator.cc  parameters.cc  type.cc
app/src/coriander/application/: appstatus.cc  board_state.cc  diagnosis.cc
app/src/coriander/backends/zephyr/: appstatus.cc  zephye_extra_shell.cc  zephyr_bldc_driver.cc  zephyr_diagnosis.cc  zephyr_encoder.cc  zephyr_extra_shell.cc  zephyr_logger.cc  zephyr_motor.cc  zephyr_nvs.cc  zephyr_persistent_parameter.cc  zephyr_phase_current_estimator.cc  zephyr_shell_protocol.cc  zephyr_systick.cc
app/src/coriander/motorctl/: encoder_elec_angle_estimator.cc  encoder_mech_angle_estimator.cc  foc.cc  foc_motor_driver.cc  low_pass_filter.cc  motor_ctl_calibrate.cc  motor_ctl_current.cc  motor_ctl_openloop.cc  motor_ctl_position.cc  motor_ctl_velocity.cc  pid.cc  sensor_handler.cc  velocity_estimator.cc
app/src/coriander/protos/: proto_td2kw.cc  proto_td2kw_rx_frame.cc  proto_td2kw_tx_frame.cc
app/tests/: foo.cc  ft_board_calibrate.cc  ft_board_state_run.cc  ft_diagnosis.cc  mocks.h  svpwm_emulator.py  ut_board_state.cc  ut_diagnosis.cc  ut_duration_estimator.cc  ut_encoder_elec_estimator.cc  ut_encoder_mech_estimator.cc  ut_foc_motor_driver.cc  ut_isensor.cc  ut_logger.cc  ut_motor_ctl_calibrate.cc  ut_motor_ctl_current.cc  ut_motor_ctl_velocity.cc  ut_parameters.cc  ut_property_stream.cc  ut_proto_td2kw.cc  ut_type.cc  ut_velocity_estimator.cc
boards/arm/atk/: Kconfig.board  Kconfig.defconfig  atk.dts  atk_defconfig  board.cmake
boards/arm/td2kw/: Kconfig.board  Kconfig.defconfig  README.md  board.cmake  board.defconfig  td2kw.dts  td2kw_defconfig
coriander.und/: id.txt  settings.xml
dts/bindings/: bldc.yaml  phase_current.yaml
recovery/: CMakeLists.txt  prj.conf
recovery/src/: fs_shell.c  main.c
